# Real-time-Health-Sentinel

./: .coverage  .gitignore  LICENSE  README.md  coverage.json  env.txt  report.html  requirement.txt  requirements.tx  requirements.txt  setup.cfg  testsentry.db
.github/workflows/: testsentry.yml
data/: training_dataset.json
scripts/: generate_dataset.py  monitor_generation.py
src/testsentry/: ai_triage.py  cli.py  collector.py  coverage_analyzer.py  email_notifier.py  fingerprinter.py  flakiness_analyzer.py  health_engine.py  ownership_mapper.py  plugin.py  regression_detector.py  report_generator.py
src/testsentry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: report.html
tests/: test_ai_triage.py  test_cache.py  test_cli.py  test_coverage.py  test_email.py  test_fingerprinter.py  test_health.py  test_ownership.py  test_regression.py  test_report_generator.py  test_sample.py
