[metadata]
name = testsentry
version = 0.1.0
description = Intelligent test suite health monitor
author = Joshva
python_requires = >=3.10

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    testsentry = testsentry.plugin
console_scripts =
    testsentry = testsentry.cli:main